--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,28 +1,10 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
-<main class="px-3">
-    <img src="{{ url_for('static', filename='img/val.jpg')}}" alt="Max-width 50%" class="h-50 rounded-circle">
-    <h1>Valtemir Procópio de Lima</h1>
-    <p class="lead">Apaixonado por tecnologias. <br>
-        Graduando do curso Licenciatura em Informática/IFRN. <br>
-        Técnico em Redes de Computadores/IMD-UFRN.</p>
-    <p class="lead">
-        <a class="link-dark" href="https://github.com/valtemirprocopio" >
-            <button type="button" class="btn btn-light">
-                <i class="bi bi-github"></i>
-            </button>
-        </a>
-        <a class="link-dark" href="https://github.com/valtemirprocopio" >
-            <button type="button" class="btn btn-light">
-                <i class="bi bi-instagram"></i>
-            </button>
-        </a>
-        <a class="link-dark" href="https://github.com/valtemirprocopio" >
-            <button type="button" class="btn btn-light">
-                <i class="bi bi-youtube"></i>
-            </button>
-        </a>
-    </p>
-</main>
+<main class="text-center mt-5">
+    <div>
+        <img src="{{url_for('static', filename='img/fotoperfil.png')}}" width="200px" class="rounded-circle" alt="foto de perfil">
+        <p>Eu sou um estudante de tecnologia buscando sempre aprender mais e mais...</p>
+    </div> 
+</main>     
 {% endblock %}
