--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
-
+<div class="container-fluid">
+    <div class="row">         
+            <div class="col-md-3 mt-3 text-center">            
+            </div>
+            <div class="col-md-6 mt-3 text-center">
+                <h1>QUEM SOU EU</h1>
+                <P>Eu sou um estudante de tecnologia buscando sempre aprender mais e mais... <hr> Apaixonado</P>
+            </div>
+            <div class="col-md-3 mt-5 text-center">                 
+            </div>
+    </div> 
 
 {% endblock %}
