--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,39 +20,15 @@
         <div class="row">         
                 <div class="col-md-3 mt-3 text-center">
                     <a class="navbar-brand" href="../templates/index.html">
-                        <h2 class=" text-center">DEV.TER</h2>
+                        <h2 class=" text-center text-white">Dev.Ter</h2>
                     </a>
-
                 </div>
                 <div class="col-md-6 mt-3 text-center">
-                    <a href="/index" class="btn btn-outline-light">Home</a> 
-                    <a href="/contato" class="btn btn-outline-light">Contato</a> 
-                    <a href="/sobre" class="btn btn-outline-light">Sobre</a> 
-
                 </div>
-                <div class="col-md-3 mt-3 text-center">
-                    <a class="btn btn-outline-light" href="https://www.instagram.com/jadson17danilo/" target="_blank">
-                        <i class="bi bi-instagram"></i>        
-                    </a>
-                    <a class="btn btn-outline-light" href="mailto:Jadson17danilo@gmail.com" target="_blank">
-                        <i class="bi bi-envelope"></i>
-                    </a>
-                    <a class="btn btn-outline-light" href="https://www.facebook.com/jadson.danilo" target="_blank">
-                        <i class="bi bi-facebook"></i>
-                    </a>
-                    <a class="btn btn-outline-light" href="https://github.com/JadsonDanilo" target="_blank">
-                        <i class="bi bi-github"></i>
-                    </a> 
-                    <a class="btn btn-outline-light" href="tel:+84988180028" >
-                        <i class="bi bi-telephone-forward"></i>
-                    </a>
-                    <a class="btn btn-outline-light" href="https://www.linkedin.com/in/jadson-danilo-4a6621256/" target="_blank">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                    <a class="btn btn-outline-light" href="https://www.behance.net/jadsondanilo" target="_blank">
-                        <i class="bi bi-behance"></i>
-                    </a>
-                    
+                <div class="col-md-3 mt-5 text-center">
+                    <a href="/index" class="btn btn-outline-light">Home</a> 
+                    <a href="/contato" class="btn btn-outline-secondary">Contato</a> 
+                    <a href="/sobre" class="btn btn-outline-secondary">Sobre</a>                    
                 </div>
         </div> 
         {% block conteudo %}
