--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,30 @@
 {% block conteudo %}
 <main class="text-center mt-5">
     <div>
-        <img src="{{url_for('static', filename='img/fotoperfil.png')}}" width="200px" class="rounded-circle" alt="foto de perfil">
-        <p>Eu sou um estudante de tecnologia buscando sempre aprender mais e mais...</p>
+        <img src="{{url_for('static', filename='img/fotoperfil.png')}}" width="200px" class="rounded-circle mt-5" alt="foto de perfil">
+        <h2 class="text-center text-white mt-5">JADSON DANILO MACENA DA SILVA</h2>
+        <a class="btn btn-outline-light mt-2" href="https://www.instagram.com/jadson17danilo/" target="_blank">
+            <i class="bi bi-instagram mt-2"></i>        
+        </a>
+        <a class="btn btn-outline-light mt-2" href="mailto:Jadson17danilo@gmail.com" target="_blank">
+            <i class="bi bi-envelope"></i>
+        </a>
+        <a class="btn btn-outline-light mt-2" href="https://www.facebook.com/jadson.danilo" target="_blank">
+            <i class="bi bi-facebook"></i>
+        </a>
+        <br>
+        <a class="btn btn-outline-light mt-2" href="https://github.com/JadsonDanilo" target="_blank">
+            <i class="bi bi-github"></i>
+        </a> 
+        <a class="btn btn-outline-light mt-2" href="tel:+84988180028" >
+            <i class="bi bi-telephone-forward"></i>
+        </a>
+        <a class="btn btn-outline-light mt-2" href="https://www.linkedin.com/in/jadson-danilo-4a6621256/" target="_blank">
+            <i class="bi bi-linkedin"></i>
+        </a>
+        <a class="btn btn-outline-light mt-2" href="https://www.behance.net/jadsondanilo" target="_blank">
+            <i class="bi bi-behance"></i>
+        </a>      
     </div> 
 </main>     
 {% endblock %}
