--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -5,9 +5,10 @@
     <div class="row">         
             <div class="col-md-3 mt-3 text-center">            
             </div>
-            <div class="col-md-6 mt-3 text-center">
+            <div class="col-md-6 mt-5 text-center">
                 <h1>QUEM SOU EU</h1>
-                <P>Eu sou um estudante de tecnologia buscando sempre aprender mais e mais... <hr> Apaixonado</P>
+                <h3>Um estudante de tecnologia buscando sempre aprender mais e mais...</h3><hr>
+                <p>Apaixonado por tecnologia busco manter sempre uma boa qualidades nas minhas competências de programação e design, buscando manter sempre uma boa convivência com a equipe e clientes</p>
             </div>
             <div class="col-md-3 mt-5 text-center">                 
             </div>
