--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -8,7 +8,7 @@
             <div class="col-md-6 mt-5 text-center">
                 <h1>QUEM SOU EU</h1>
                 <h3>Um estudante de tecnologia buscando sempre aprender mais e mais...</h3><hr>
-                <p>Apaixonado por tecnologia busco manter sempre uma boa qualidades nas minhas competências de programação e design, buscando manter sempre uma boa convivência com a equipe e clientes</p>
+                <p>Apaixonado por tecnologia busco manter sempre uma boa qualidades nas minhas competências de programação e design, gosto de solucionar conflitos e mantendo uma boa convivência com a equipe e clientes.</p>
             </div>
             <div class="col-md-3 mt-5 text-center">                 
             </div>
