--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
         {% block conteudo %}
         
         {% endblock %}
-        <footer class="text-center fixed-bottom">
+        <footer class="text-center">
             <p>Criado por <a href="https://github.com/JadsonDanilo" target="_blank" >Jadson Danilo</a></p>
         </footer> 
     </div>
